---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected]: 
  ┌─ single:1:1
  │
1 │ 
  │ ^ unexpected character '\r'


